# Quad-KD-Benchmarks

./: .gitignore  Benchmark.cpp  CMakeLists.txt  KDEfficientHelper.cpp  KDEfficientHelper.h  KDTreeEfficient.cpp  KDTreeEfficient.h  MyKDTree.cpp  MyKDTree.h  QuadTree.cpp  QuadTree.h  Util.h  main.cpp  myKDQueryOutput.txt
benchmark/: CMakeLists.txt
benchmark/cmake/: GetGitVersion.cmake
benchmark/include/benchmark/: benchmark.h
benchmark/src/: CMakeLists.txt  commandlineflags.cc
include/: KDBTreeEfficient.h  KDEfficientHelper.h  KDTreeEfficient.h  MyKDTree.h  PointRegionQuadTree.h  QuadTree.h  SortKDTree.h  TreeHelper.h  Util.h
src/: Benchmark.cpp  CMakeLists.txt  KDBTreeEfficient.cpp  KDTreeEfficient.cpp  MyKDTree.cpp  PointRegionQuadTree.cpp  QuadTree.cpp  SortKDTree.cpp  main.cpp  output1.txt  output2.txt
src/spacer/: BenchSpace.cpp  CMakeLists.txt  malloc_count.c  malloc_count.h  spacer.hpp
tests/: KDTreeTests.cpp  KDTreeTests.h  Makefile  QuadTreeTest.cpp  QuadTreeTest.h  Tests.cpp  UtilTest.cpp  UtilTest.h  tests
